# runesh

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  install.ps1  install.sh  package.json
.cargo/: audit.toml
.github/: release-drafter-cli.yml  release-drafter-ui.yml  release-drafter.yml
.github/workflows/: ci.yml  publish-ui.yml  release-drafter-cli.yml  release-drafter.yml  release.yml
crates/helvetia-agent/: Cargo.toml
crates/helvetia-agent/src/: enroll.rs  main.rs  persist.rs
crates/helvetia-agentd/: Cargo.toml
crates/helvetia-agentd/src/: enroll.rs  heartbeat.rs
crates/helvetia-ctl/: Cargo.toml
crates/helvetia-ctl/src/: api.rs  main.rs
crates/helvetia-server/: Cargo.toml
crates/helvetia-server/src/: main.rs  state.rs
crates/runesh-acl/: Cargo.toml
crates/runesh-acl/src/: diff.rs  error.rs  eval.rs  hujson.rs  lib.rs  model.rs
crates/runesh-agent/: Cargo.toml
crates/runesh-agent/src/: error.rs  lib.rs
crates/runesh-agentd/: Cargo.toml
crates/runesh-agentd/src/: heartbeat.rs  main.rs  persist.rs
crates/runesh-appliance/: Cargo.toml
crates/runesh-appliance/src/: lib.rs  opnsense.rs  unifi.rs
crates/runesh-asset/: Cargo.toml
crates/runesh-asset/src/: lib.rs
crates/runesh-audit/: Cargo.toml
crates/runesh-audit/src/: lib.rs
crates/runesh-auth/: Cargo.toml
crates/runesh-auth/src/: axum_middleware.rs  enrollment.rs  error.rs  handlers.rs  jwks.rs  lib.rs  oidc.rs  session.rs  store.rs  token.rs
crates/runesh-backup/: Cargo.toml
crates/runesh-backup/src/: lib.rs  scan.rs  store.rs
crates/runesh-baseline/: Cargo.toml
crates/runesh-baseline/src/: checker.rs  collector.rs  lib.rs  remediator.rs
crates/runesh-cli/: Cargo.toml
crates/runesh-cli/src/: init.rs  main.rs  new_project.rs  self_update.rs  sync.rs  validate.rs
crates/runesh-cli/src/init/: templates.rs
crates/runesh-cli/wix/: main.wxs
crates/runesh-config/: Cargo.toml
crates/runesh-config/src/: error.rs  lib.rs  spec.rs
crates/runesh-config/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
crates/runesh-coord/: Cargo.toml
crates/runesh-coord/src/: error.rs  lib.rs  mapper.rs  noise.rs  types.rs
crates/runesh-core/: Cargo.toml
crates/runesh-core/src/: db.rs  error.rs  lib.rs  metrics.rs  middleware.rs  openapi.rs  pagination.rs  rate_limit.rs  redis.rs  service.rs  shutdown.rs  upload.rs  ws_broadcast.rs
crates/runesh-desktop/: Cargo.toml
crates/runesh-desktop/src/: auth.rs  clipboard.rs  cursor.rs  display.rs  error.rs  handlers.rs  lib.rs  protocol.rs  session.rs  session_helper.rs
crates/runesh-desktop/src/capture/: audio.rs  macos.rs  mod.rs  wayland.rs  windows.rs  x11.rs
crates/runesh-desktop/src/encode/: h264.rs  mod.rs  opus_enc.rs
crates/runesh-desktop/src/input/: binary.rs  macos.rs  mod.rs  mpx.rs  windows.rs  x11.rs
crates/runesh-desktop/src/transport/: mod.rs  signal.rs  webrtc_peer.rs
crates/runesh-dns/: Cargo.toml
crates/runesh-dns/src/: lib.rs  resolver.rs
crates/runesh-docker/: Cargo.toml
crates/runesh-docker/src/: lib.rs
crates/runesh-edr/: Cargo.toml
crates/runesh-edr/src/: lib.rs  watcher.rs
crates/runesh-flow/: Cargo.toml
crates/runesh-flow/src/: lib.rs  netflow.rs
crates/runesh-hyperv/: Cargo.toml
crates/runesh-hyperv/src/: lib.rs  wmi_impl.rs
crates/runesh-inventory/: Cargo.toml
crates/runesh-inventory/src/: battery.rs  bios.rs  collector.rs  cpu.rs  disk.rs  error.rs  gpu.rs  handlers.rs  lib.rs  memory.rs  models.rs  network.rs  os.rs  process.rs  software.rs
crates/runesh-inventory/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
crates/runesh-ipam/: Cargo.toml
crates/runesh-ipam/src/: lib.rs
crates/runesh-jobs/: Cargo.toml
crates/runesh-jobs/src/: executor.rs  lib.rs  task.rs
crates/runesh-license/: Cargo.toml
crates/runesh-license/src/: lib.rs
crates/runesh-mdm/: Cargo.toml
crates/runesh-mdm/src/: attestation.rs  lib.rs
crates/runesh-mesh/: Cargo.toml
crates/runesh-mesh/src/: error.rs  ipam.rs  keys.rs  lib.rs  peer.rs  tunnel.rs
crates/runesh-monitor/: Cargo.toml
crates/runesh-monitor/src/: alert.rs  check.rs  lib.rs  scheduler.rs
crates/runesh-notify/: Cargo.toml
crates/runesh-notify/src/: email.rs  lib.rs  webhook.rs
crates/runesh-patch/: Cargo.toml
crates/runesh-patch/src/: lib.rs
crates/runesh-pkg/: Cargo.toml
crates/runesh-pkg/src/: apk.rs  apt.rs  brew.rs  detect.rs  dnf.rs  freebsd.rs  lib.rs  pacman.rs  runner.rs  win_registry.rs  winget.rs  zypper.rs
crates/runesh-proxmox/: Cargo.toml
crates/runesh-proxmox/src/: lib.rs
crates/runesh-proxy/: Cargo.toml
crates/runesh-proxy/src/: config.rs  error.rs  lib.rs  router.rs
crates/runesh-rdp/: Cargo.toml
crates/runesh-rdp/src/: error.rs  input.rs  lib.rs  precondition.rs  session.rs
crates/runesh-relay/: Cargo.toml
crates/runesh-relay/src/: error.rs  frame.rs  lib.rs  server.rs
crates/runesh-remote/: Cargo.toml
crates/runesh-remote/src/: auth.rs  error.rs  handlers.rs  lib.rs  protocol.rs
crates/runesh-server/: Cargo.toml
crates/runesh-stun/: Cargo.toml
crates/runesh-stun/src/: client.rs  lib.rs
crates/runesh-tauri/: Cargo.toml
crates/runesh-tauri/src/: config.rs  elevation.rs  lib.rs  process.rs  tray.rs
crates/runesh-telemetry/: Cargo.toml
crates/runesh-telemetry/src/: lib.rs
crates/runesh-tun/: Cargo.toml
crates/runesh-tun/src/: error.rs  lib.rs  tun_device.rs
crates/runesh-vault/: Cargo.toml
crates/runesh-vault/src/: entry.rs  lib.rs
crates/runesh-vfs/: Cargo.toml
crates/runesh-vfs/src/: cache.rs  config.rs  error.rs  lib.rs  overlay.rs  provider.rs  registry.rs
crates/runesh-vmware/: Cargo.toml
crates/runesh-vmware/src/: lib.rs
crates/runesh-winget/: Cargo.toml
crates/runesh-winget/src/: auth.rs  handlers.rs  lib.rs  manifest.rs  repo.rs
crates/runesh-workload/: Cargo.toml
docs/: HELVETIA-PLAN.md  IMPROVEMENTS.md  PLAN.md  ROADMAP.md  USAGE.md
templates/: .env.example  CLAUDE.base.md  Dockerfile  compose.yaml
templates/extension/: package.json  tsconfig.json  wxt.config.ts
(+26 files in other folders)
