[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
version = "0.16.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MyDrift-user/runesh"
authors = ["MyDrift-user"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
bytes = "1"
thiserror = "2"
deadpool-redis = "0.23"
