[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
version = "0.19.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MyDrift-user/runesh"
authors = ["MyDrift-user"]

[workspace.dependencies]
# Runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"

# Tracing / errors / bytes
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
bytes = "1"
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP / web
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
url = "2"

# Crypto / secrets
rand = "0.8"
rand_core = "0.6"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
zeroize = { version = "1", features = ["zeroize_derive"] }
secrecy = "0.10"
argon2 = "0.5"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
subtle = "2"
jsonwebtoken = "9"

# Auth extras
x25519-dalek = { version = "2", features = ["static_secrets"] }

# Redis
deadpool-redis = "0.23"

# Testing helpers
tempfile = "3"

# CLI
clap = { version = "4", features = ["derive"] }
