[package]
name = "helvetia-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Helvetia endpoint agent: enrolls with the controller, joins the mesh, runs heartbeat and task execution"

[[bin]]
name = "helvetia-agent"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = { workspace = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"

runesh-agent = { path = "../runesh-agent" }
runesh-mesh = { path = "../runesh-mesh" }
runesh-coord = { path = "../runesh-coord" }
