[package]
name = "helvetia-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Helvetia coordination server: node enrollment, mesh coordination, DERP relay, and management API"

[[bin]]
name = "helvetia-server"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = { workspace = true }

axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

runesh-acl = { path = "../runesh-acl" }
runesh-mesh = { path = "../runesh-mesh" }
runesh-coord = { path = "../runesh-coord" }
runesh-relay = { path = "../runesh-relay" }
runesh-proxy = { path = "../runesh-proxy" }
