[package]
name = "runesh-acl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Tailscale-compatible HuJSON ACL parser, evaluator, and diff engine for WireGuard mesh access control"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { workspace = true }
ipnet = "2"
tracing = { workspace = true }
