[package]
name = "runesh-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Endpoint agent daemon: enrollment, heartbeat, mesh integration, and feature-gated service modules"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

runesh-mesh = { path = "../runesh-mesh" }
