[package]
name = "runesh-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Append-only hash-chained audit log with tamper detection"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
subtle = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "sync"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "io-util", "sync"] }
