[package]
name = "runesh-auth"
version.workspace = true
edition.workspace = true
description = "Shared OIDC authentication with extensible provider hooks"

[features]
default = ["axum"]
axum = ["dep:axum", "dep:axum-extra", "dep:tower"]

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
rand = "0.9"
urlencoding = "2"
async-trait = "0.1"

# Optional: Axum middleware support
axum = { version = "0.8", optional = true }
axum-extra = { version = "0.10", features = ["cookie"], optional = true }
tower = { version = "0.5", optional = true }
