[package]
name = "runesh-auth"
version.workspace = true
edition.workspace = true
description = "Shared OIDC authentication with extensible provider hooks"

[features]
default = ["axum"]
axum = ["dep:axum", "dep:axum-extra", "dep:tower"]
redis = ["dep:runesh-core", "dep:deadpool-redis"]

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "10"
reqwest = { version = "0.13", default-features = false, features = [
    "rustls", "charset", "http2",
    "json", "form",
] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.11"
hmac = "0.13"
hex = "0.4"
base64 = "0.22"
rand = "0.10"
urlencoding = "2"
async-trait = "0.1"

# Optional: Axum middleware support
axum = { version = "0.8", optional = true }
axum-extra = { version = "0.12", features = ["cookie"], optional = true }
tower = { version = "0.5", optional = true }

# Optional: Redis session store
runesh-core = { path = "../runesh-core", default-features = false, features = ["redis"], optional = true }
deadpool-redis = { workspace = true, optional = true }
