[package]
name = "runesh-backup"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Backup engine: content-defined chunking, encryption, deduplication, retention policies, multi-backend storage"

[dependencies]
tokio = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
thiserror = { workspace = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
