[package]
name = "runesh-backup"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Backup engine: content-defined chunking, encryption, deduplication, retention policies, multi-backend storage"

[dependencies]
tokio = { workspace = true, features = ["fs", "io-util", "sync", "rt"] }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
async-recursion = "1"
fastcdc = "4"
zstd = { version = "0.13", default-features = false }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
