[package]
name = "runesh-baseline"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Declarative desired-state baselines with composable inheritance, drift detection, and enforcement"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = { workspace = true }
