[package]
name = "runesh-cli"
version.workspace = true
edition.workspace = true
description = "CLI tool to scaffold new Rust + Next.js + shadcn/ui projects with RUNESH shared code"
authors = ["MyDrift-user"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/MyDrift-user/runesh"

[[bin]]
name = "runesh"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
console = "0.16"
indicatif = "0.18"
dirs-next = "2"
# self_update 0.43 + 0.44 fail to compile due to upstream E0282 type
# inference bug (filed upstream). Pinned to 0.42 until fixed.
self_update = { version = "=0.42.0", default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2", "rustls"] }
runesh-telemetry = { path = "../runesh-telemetry", default-features = false }

[package.metadata.wix]
upgrade-guid = "B1D8D9F2-3E4A-4C7B-9A1F-7E2C5B6D8E10"
path-guid    = "C2E9EAF3-4F5B-5D8C-AB20-8F3D6C7E9F21"
license      = false
eula         = false
