[package]
name = "runesh-coord"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Tailscale-compatible coordination server: TS2021 Noise handshake, node registration, peer map distribution"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }

snow = "0.9"
x25519-dalek = { version = "2", features = ["static_secrets"] }

runesh-acl = { path = "../runesh-acl" }
runesh-mesh = { path = "../runesh-mesh" }
