[package]
name = "runesh-core"
version.workspace = true
edition.workspace = true
description = "Shared backend utilities: AppError, rate limiter, WebSocket broadcast, file upload"

[features]
default = ["axum", "sqlx"]
axum = ["dep:axum", "dep:tower"]
sqlx = ["dep:sqlx"]

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Optional: Axum integration
axum = { version = "0.8", features = ["ws", "multipart"], optional = true }
tower = { version = "0.5", optional = true }

# Optional: SQLx integration
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"], optional = true }
