[package]
name = "runesh-core"
version.workspace = true
edition.workspace = true
description = "Shared backend utilities: AppError, rate limiter, WebSocket broadcast, file upload, middleware, service installer"

[features]
default = ["axum", "sqlx"]
axum = ["dep:axum", "dep:tower", "dep:tower-http", "dep:futures-util"]
sqlx = ["dep:sqlx"]
openapi = ["dep:utoipa", "dep:utoipa-axum", "dep:utoipa-swagger-ui", "axum"]

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"

# Optional: Axum integration
axum = { version = "0.8", features = ["ws", "multipart"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
futures-util = { version = "0.3", optional = true }

# Optional: OpenAPI/Swagger
utoipa = { version = "5", features = ["chrono", "uuid", "axum_extras"], optional = true }
utoipa-axum = { version = "0.2", optional = true }
utoipa-swagger-ui = { version = "8", features = ["axum"], optional = true }

# Optional: SQLx integration
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"], optional = true }
