[package]
name = "runesh-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared backend utilities: AppError, rate limiter, WebSocket broadcast, file upload, middleware, service installer"

[features]
default = ["axum", "sqlx"]
axum = ["dep:axum", "dep:tower", "dep:tower-http", "dep:futures-util"]
sqlx = ["dep:sqlx"]
redis = ["dep:deadpool-redis", "dep:futures-util"]
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus", "axum"]
openapi = ["dep:utoipa", "dep:utoipa-axum", "dep:utoipa-swagger-ui", "axum"]

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.10"
bytes = { workspace = true }

# Optional: Axum integration
axum = { version = "0.8", features = ["ws", "multipart"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
futures-util = { version = "0.3", optional = true }

# Optional: OpenAPI/Swagger
utoipa = { version = "5", features = ["chrono", "uuid", "axum_extras"], optional = true }
utoipa-axum = { version = "0.2", optional = true }
utoipa-swagger-ui = { version = "9", features = ["axum"], optional = true }

# Optional: Redis integration
deadpool-redis = { workspace = true, optional = true }

# Optional: Prometheus metrics
metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.18", optional = true }
# Optional: SQLx integration.
# default-features = false drops sqlx's `any` driver which transitively pulls
# sqlx-mysql -> rsa (RUSTSEC-2023-0071 Marvin Attack timing sidechannel).
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "migrate",
    "json",
    "uuid",
    "chrono",
], optional = true }
