[package]
name = "runesh-dns"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MagicDNS, split DNS, and service discovery for mesh networks"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net"] }
tracing = { workspace = true }
hickory-resolver = { version = "0.25", features = ["system-config"] }
