[package]
name = "runesh-edr"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Endpoint detection and response: file integrity monitoring, process tracking, IoC matching"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
