[package]
name = "runesh-flow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Network flow collector: NetFlow, sFlow, IPFIX parsing, bandwidth attribution"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
tokio = { workspace = true, features = ["net", "time"] }
tracing = { workspace = true }
ipnet = { version = "2", features = ["serde"] }
