[package]
name = "runesh-hyperv"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Hyper-V workload driver via WMI: VMs, snapshots, live migration"

[dependencies]
tokio = { workspace = true, features = ["rt"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
runesh-workload = { path = "../runesh-workload" }

[target.'cfg(windows)'.dependencies]
wmi = { version = "0.17", features = ["chrono"] }
chrono = { workspace = true }
