[package]
name = "runesh-inventory"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Cross-platform hardware and software inventory collection for enterprise remote management"

[features]
default = ["axum"]
axum = ["dep:axum"]
delta = []

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
sysinfo = "0.38"
uuid = { workspace = true }

# Optional: Axum REST handlers
axum = { version = "0.8", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.17"
winreg = "0.55"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
