[package]
name = "runesh-ipam"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "IP address management: prefixes, VLANs, IP allocation, utilization tracking"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { workspace = true }
ipnet = { version = "2", features = ["serde"] }
