[package]
name = "runesh-jobs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Typed job/task model with idempotency, retry policies, and queue management"

[dependencies]
tokio = { workspace = true, features = ["process", "time"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
