[package]
name = "runesh-license"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Software license tracking: entitlements, assignments, utilization, renewal alerts"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
