[package]
name = "runesh-mdm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Mobile device management: enrollment, config profiles, remote lock/wipe"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
