[package]
name = "runesh-mdm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Mobile device management: enrollment, config profiles, remote lock/wipe"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
# ASN.1 DER parser for Android Key Attestation (OID 1.3.6.1.4.1.11129.2.1.17).
der = { version = "0.7", default-features = false, features = ["alloc", "std", "oid"] }

[dev-dependencies]
tokio = { workspace = true }
